--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron">
+    <h1>PhoneBook</h1>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Hi, I'm your own PhoneBook!'</h2>
+        <p>
+            PhoneBook is a application that
+            uses Entity Framework Core in an
+            ASP.NET Core MVC web application.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <h2>Build it from scratch</h2>
+        <p>You can build the application by following the steps in a series of tutorials.</p>
+        <p><a class="btn btn-default" href="https://docs.asp.net/en/latest/data/ef-mvc/intro.html">See the tutorial &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Download it</h2>
+        <p>You can download the completed project from GitHub.</p>
+        <p><a class="btn btn-default" href="https://github.com/OlegVorontsov/ASP.NET-Core_MVC-App_PhoneBook">See project source code &raquo;</a></p>
+    </div>
 </div>
