contacts details can be viewed

--- a/Views/Contacts/Details.cshtml
+++ b/Views/Contacts/Details.cshtml
@@ -10,26 +10,54 @@
     <h4>Contact</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MName)
         </dd>
 
-
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Infos)
+        </dt>
+        <dd>
+            <a asp-controller="ContactInfoes" asp-action="Create">Create New</a>
+        </dd>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>Phone</th>
+                    <th>Note</th>
+                </tr>
+                @foreach (var item in Model.Infos)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Phone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Note)
+                        </td>
+                        <td>
+                            <a asp-controller="ContactInfoes" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-controller="ContactInfoes" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
 
     </dl>
 </div>
