--- a/Views/ContactInfoes/Create.cshtml
+++ b/Views/ContactInfoes/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ContactId" class="control-label"></label>
-                <select asp-for="ContactId" class ="form-control" asp-items="ViewBag.ContactId"></select>
+                <select asp-for="ContactId" class="form-control" asp-items="ViewBag.ContactId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Contacts" asp-action="Index">Back to Contacts List</a>
 </div>
 
 @section Scripts {
