--- a/Views/ContactInfoes/Edit.cshtml
+++ b/Views/ContactInfoes/Edit.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Contacts" asp-action="Index">Back to Contacts List</a>
 </div>
 
 @section Scripts {
