ContactInfoes edit method and view midified

--- a/Views/ContactInfoes/Create.cshtml
+++ b/Views/ContactInfoes/Create.cshtml
@@ -37,6 +37,10 @@
     <a asp-controller="Contacts" asp-action="Index">Back to Contacts List</a>
 </div>
 
+<div>
+    <a asp-action="Index">Back to Notes List</a>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
