--- a/Views/ContactInfoes/Edit.cshtml
+++ b/Views/ContactInfoes/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -23,11 +24,13 @@
                 <input asp-for="Note" class="form-control" />
                 <span asp-validation-for="Note" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ContactId" class="control-label"></label>
-                <select asp-for="ContactId" class="form-control" asp-items="ViewBag.ContactId"></select>
-                <span asp-validation-for="ContactId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="ContactId" />
+
+            @*<div class="form-group">
+            <label asp-for="ContactId" class="control-label"></label>
+            <select asp-for="ContactId" class="form-control" asp-items="ViewBag.ContactId"></select>
+            <span asp-validation-for="ContactId" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
