--- a/Views/ContactInfoes/Create.cshtml
+++ b/Views/ContactInfoes/Create.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -22,10 +23,9 @@
                 <input asp-for="Note" class="form-control" />
                 <span asp-validation-for="Note" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ContactId" class="control-label"></label>
-                <select asp-for="ContactId" class="form-control" asp-items="ViewBag.ContactId"></select>
-            </div>
+
+            <input type="hidden" asp-for="ContactId" value="@ViewData["ContactId"]" />
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -35,10 +35,6 @@
 
 <div>
     <a asp-controller="Contacts" asp-action="Index">Back to Contacts List</a>
-</div>
-
-<div>
-    <a asp-action="Index">Back to Notes List</a>
 </div>
 
 @section Scripts {
