--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,26 @@
                     </ul>
                 </div>
             </div>
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="btn-group pull-right" style="width: 650px;">
+                    @*<a class="navbar-brand" href="~/">В начало</a>*@
+                    <a class="navbar-brand" herf="#">@User.Identity.Name в системе</a>
+                    <form method="post" asp-controller="Account" asp-action="Logout" id="logoutform" asp-antiforgery="true">
+                        @*<input type="submit" value="Выход"/>*@
+                        <a class="navbar-brand" href="#" onclick="document.getElementById('logoutform').submit()">LogOut</a>
+                    </form>
+                </div>
+            }
+            else
+            {
+                <div class="btn-group pull-right">
+                    <a class="navbar-brand" href="/Account/Login">LogIn</a>
+                    <a class="navbar-brand" href="/Account/Register">Register</a>
+                </div>
+            }
+
         </nav>
     </header>
     <div class="container">
