Authentication for any user works

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             {
                 <div class="btn-group pull-right" style="width: 650px;">
                     @*<a class="navbar-brand" href="~/">В начало</a>*@
-                    <a class="navbar-brand" herf="#">@User.Identity.Name в системе</a>
+                    <a class="navbar-brand" herf="#">@User.Identity.Name authorized</a>
                     <form method="post" asp-controller="Account" asp-action="Logout" id="logoutform" asp-antiforgery="true">
                         @*<input type="submit" value="Выход"/>*@
                         <a class="navbar-brand" href="#" onclick="document.getElementById('logoutform').submit()">LogOut</a>
