login and register users changed. UsersController added. create, edit and delete users added

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <input asp-for="LoginProp" class="form-control" placeholder="User" />
+                        <input asp-for="Email" class="form-control" placeholder="Email" />
                     </div>
                 </div>
 
@@ -23,6 +23,11 @@
                     <div class="form-group">
                         <input asp-for="Password" class="form-control" placeholder="Password" />
                     </div>
+                </div>
+
+                <div>
+                    <label asp-for="RememberMe"></label><br />
+                    <input asp-for="RememberMe" />
                 </div>
 
                 <div class="text-center col-xs-12">
