--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -15,6 +15,7 @@
             <td>
                 <form asp-action="Delete" asp-route-id="@user.Id" method="post">
                     <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
+                    <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Change password</a>
                     <button type="submit" class="btn btn-sm btn-danger">
                         Delete
                     </button>
