--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -37,10 +40,8 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <div class="btn-group pull-right" style="width: 650px;">
-                    @*<a class="navbar-brand" href="~/">В начало</a>*@
                     <a class="navbar-brand" herf="#">@User.Identity.Name authorized</a>
                     <form method="post" asp-controller="Account" asp-action="Logout" id="logoutform" asp-antiforgery="true">
-                        @*<input type="submit" value="Выход"/>*@
                         <a class="navbar-brand" href="#" onclick="document.getElementById('logoutform').submit()">LogOut</a>
                     </form>
                 </div>
