--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <a asp-action="Create">Add user</a>
 
 <table class="table">
-    <tr><th>Email</th><th>Год</th><th></th></tr>
+    <tr><th>Email</th><th></th></tr>
     @foreach (var user in Model)
     {
         <tr>
