--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <input asp-for="Email" class="form-control" placeholder="Email" />
+                        <input asp-for="Email" class="form-control" placeholder="User name" />
                     </div>
                 </div>
 
