--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Hi, I'm your own PhoneBook!'</h2>
+        <h2>Hi, I'm your own PhoneBook!</h2>
         <p>
             PhoneBook is a application that
             uses Entity Framework Core in an
